<resources>
    <string name="app_name">My Application</string>
    <string name="image_source">Image source https://www.movieposters.com/</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="view_later">View later</string>
    <string name="compilation">Compilation</string>
    <string name="settings">Settings</string>
    <string name="menu_favorites_title">Favorite</string>
    <string name="menu_watch_later_title">Watch later </string>
    <string name="menu_selections_title">Library</string>
    <string name="page_title">Search it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_title_text">Home</string>
</resources>