<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1 "
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster4" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/image_source"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_menu" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <LinearLayout
        android:id="@+id/middle_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:background="@drawable/corner_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/menu"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/favorites"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_view_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/view_later"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_compilation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/compilation"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/settings"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <FrameLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>